--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 public_key = 'public_9DqYhl8UYtD2XOPF9uUg54Igqm4='
 private_key = 'private_CMl4Oemcd518u5/2thxBzrbXLo8='
-end_point = 'https://ik.imagekit.io/baikjs87/'
+export REACT_APP_END_POINT = 'https://ik.imagekit.io/baikjs87/'
