--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "imagekitio-react": "^2.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.2.1",
+        "react-router-dom": "^6.4.2",
         "react-scripts": "5.0.1",
         "web-vitals": "^2.1.4"
     },
@@ -43,5 +43,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "dotenv": "^16.0.3"
     }
 }
