--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "ShouldIGetIt",
+  "name": "Reviewed",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3000",
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -11,11 +14,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "@mantine/core": "^5.2.0",
-    "@mantine/form": "^5.2.0",
-    "@mantine/hooks": "^5.2.0",
-    "@mantine/modals": "^5.2.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "PORT=4000 react-scripts start",
@@ -40,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+      "dotenv": "^16.0.3"
   }
 }
