--- a/package.json
+++ b/package.json
@@ -1,50 +1,13 @@
 {
-    "name": "ShouldIGetIt",
-    "version": "0.1.0",
-    "private": true,
-    "proxy": "http://localhost:3000",
-    "dependencies": {
-        "@mantine/core": "^5.2.0",
-        "@mantine/form": "^5.2.0",
-        "@mantine/hooks": "^5.2.0",
-        "@mantine/modals": "^5.2.0",
-        "@testing-library/jest-dom": "^5.16.5",
-        "@testing-library/react": "^13.4.0",
-        "@testing-library/user-event": "^13.5.0",
-        "express": "^4.18.2",
-        "imagekit": "^4.1.1",
-        "imagekitio-react": "^2.0.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-router-dom": "^6.4.2",
-        "react-scripts": "5.0.1",
-        "web-vitals": "^2.1.4"
+    "name": "Reviewed",
+    "description": "Build scripts for Heroku",
+    "engines": {
+      "node": "16.x"
     },
-    "scripts": {
-        "start": "PORT=4000 react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
-    "devDependencies": {
-        "dotenv": "^16.0.3"
+        "scripts": {
+        "build": "npm install --prefix client && npm run build --prefix client",
+        "clean": "rm -rf public",
+        "deploy": "cp -a client/build/. public/",
+        "heroku-postbuild": "npm run clean && npm run build && npm run deploy"
     }
 }
