--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-    "name": "Reviewed",
-    "description": "Build scripts for Heroku",
-    "engines": {
-        "node": "18.x"
-    },
+    "name": "json-server-deploy",
+    "version": "1.0.0",
+    "description": "Simple json database to deploy to the host of your choice",
+    "main": "server.js",
     "scripts": {
-        "build": "npm install --prefix client && npm run build --prefix client",
-        "clean": "rm -rf public",
-        "deploy": "cp -a client/build/. public/",
-        "heroku-postbuild": "npm run clean && npm run build && npm run deploy"
+      "start": "node server.js"
+    },
+    "keywords": [
+      "json-server,heroku, node, REST API"
+    ],
+    "author": "Jesper Orb",
+    "license": "ISC",
+    "dependencies": {
+      "json-server": "^0.17.0"
     }
-}
+  }
